--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -47,38 +47,17 @@
     width: 40px;
     height: 40px;
     border-radius: 3px;
-    color: #798A9F;
     border: 1px solid #7AA7C7;
-    background-color: #9FAAB5;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 16px;
     line-height: 19px;
-}
-
-.keyboard-enabled {
-    width: 664px;
-    height: 91px;
-    display: flex;
-    gap: 12px;
-    flex-wrap: wrap;
-
-    position: absolute;
-    left: 221px;
-    top: 600px;
-}
-
-.keyboard-enabled button {
-    width: 40px;
-    height: 40px;
-    border-radius: 3px;
-    color: #39739D;
-    border: 1px solid #7AA7C7;
     background-color: #E1ECF4;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 19px;
+    color: #39739D;
+}
+button:disabled {
+    background-color: #9FAAB5;
+    color: #798A9F;
 }
 
 .chosen-word {
