--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -55,6 +55,7 @@
     background-color: #E1ECF4;
     color: #39739D;
 }
+
 button:disabled {
     background-color: #9FAAB5;
     color: #798A9F;
@@ -66,7 +67,7 @@ button:disabled {
     font-weight: 700;
     font-size: 50px;
     line-height: 68px;
-    
+
     display: flex;
 
     position: absolute;
@@ -74,9 +75,59 @@ button:disabled {
     right: 61px;
 }
 
+input {
+    position: absolute;
+    bottom: 51px;
+    left: 395px;
+
+    width: 353px;
+    height: 40px;
+    background-color: #FFFFFF;
+    border: 1px solid #CCCCCC;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 3px;
+}
+
+input:focus {
+    outline: 0;
+}
+
+p {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+
+    position: absolute;
+    bottom: 60px;
+    left: 240px;
+}
+
+.kick {
+    width: 100px;
+    height: 40px;
+    background-color: #E1ECF4;
+    border: 1px solid #7AA7C7;
+    border-radius: 3px;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #3C76A1;
+
+    position: absolute;
+    bottom: 55px;
+    right: 150px;
+}
+
 .wrong-answer {
     color: #FF0000;
 }
+
 .correct-answer {
     color: #27AE60;
 }
