--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -111,7 +111,7 @@ p {
     border: 1px solid #7AA7C7;
     border-radius: 3px;
 
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
